syntax = "proto3";

package releaseagent;

message CreateReleaseRequest {
  string repo_url = 1;
  string revision = 2;
}

enum CreateReleaseStatus {
  SUCCESS = 0;
  FAILURE = 1;
}

message CreateReleaseResponse {
  CreateReleaseStatus status = 1;
  string release_id = 2;
}

message PublicKey {
  string key_id = 1;
  string key_data = 2;
}

message RollPGPKeysRequest { string algorithm = 1; }

message Empty { string dummy = 1; }

service ReleaseAgent {
  rpc CreateRelease(CreateReleaseRequest) returns (CreateReleaseResponse);
  rpc RollPGPKeys(RollPGPKeysRequest) returns (PublicKey);
  rpc GetPublicKey(Empty) returns (PublicKey);
}
